--- a/06_Dom/dom.html
+++ b/06_Dom/dom.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8" />
 
     <title>DOM Learning</title>
+    <style>
+      .bg-black{
+        background-color: blueviolet;
+      }
+    </style>
   </head>
-  <body>
-    <div class="bg-black">
-      <h1>DOM learning on Chai aur Code</h1>
-      <p style="color:blue">
+  <body class="bg-black">
+    <div >
+      <h1 id="title" class="heading">DOM learning on Chai aur Code
+        <span style="display: none;">test text</span>
+      </h1>
+      <p style="color:red">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit
         nemo at, a dignissimos, saepe quo reiciendis modi velit fugiat
         repellendus excepturi, ipsam deleniti eius inventore. Voluptate, quis?
         Corrupti, blanditiis. Fugit?
-        
+        <input type="password" name="" id="">
+        <ul>
+          <li class="list">One</li>
+          <li class="list">Two</li>
+          <li class="list">Three</li>
+        </ul>
       </p>
     </div>
   </body>
