--- a/09_API/AppRequest.html
+++ b/09_API/AppRequest.html
@@ -15,29 +15,23 @@
   </body>
 
   <script>
-
-    const requestUrl = "https://api.github.com/users/Jyotish2002"
+    const requestUrl = "https://api.github.com/users/Jyotish2002";
 
     const xhr = new XMLHttpRequest();
 
     xhr.open("GET", requestUrl);
 
     xhr.onreadystatechange = function () {
-
       console.log(xhr.readyState);
 
       if (xhr.readyState === 4) {
-
         const data = JSON.parse(this.responseText);
 
-        console.log(typeof data);
+        console.log(data);
 
         console.log(data.followers);
-       
-
       }
-
-    }
+    };
 
     xhr.send();
   </script>
