--- a/09_API/AppRequest.html
+++ b/09_API/AppRequest.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body style="background-color: #212121; color: blue">
-    0 UNSENT Client has been created. open() not called yet.<br />
-    1 OPENED open() has been called.<br />
+  <body style="background-color: #212121; color: skyblue">
+    <br><br>
+    0 UNSENT Client has been created. open() not called yet.<br /><br>
+    1 OPENED open() has been called.<br /><br>
     2 HEADERS_RECEIVED send() has been called, and headers and status are
-    available.<br />
-    3 LOADING Downloading; responseText holds partial data.<br />
+    available.<br /><br>
+    3 LOADING Downloading; responseText holds partial data.<br /><br>
     4 DONE The operation is complete.<br />
   </body>
 
   <script>
-    const requestUrl = "https://api.github.com/users/Jyotish2002";
+    const requestUrl = "https://api.github.com/users/Jyotish2002"
 
     const xhr = new XMLHttpRequest();
 
