--- a/09_Advance+one/AppRequest.html
+++ b/09_Advance+one/AppRequest.html
@@ -16,7 +16,7 @@
   </body>
 
   <script>
-    const requestUrl = "https://api.github.com/users/Jyotish2002"
+    const requestUrl = "https://api.github.com/users/Jyotish2002";
 
     const xhr = new XMLHttpRequest();
 
